--- a/src/components/Tag/tag.module.scss
+++ b/src/components/Tag/tag.module.scss
@@ -3,9 +3,9 @@
   padding: 0.3rem 1rem;
   background:#9f392b;
   font-size: 0.7rem;
-}
 
-.tag a {
-  color: #fff;
-  text-decoration: none;
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
 }
